fix: use List.getLast()